# cpp_message_system

./: CMakeLists.txt
inc/: message_queue.hpp  messages.hpp  my_tasks.hpp  tasks.hpp
src/: main.cpp
